# ChangeLog for sys-kernel/ck-sources
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.67 2004/11/19 22:28:07 plasmaroo Exp $

*ck-sources-2.4.27-r3 (19 Nov 2004)

  19 Nov 2004; <plasmaroo@gentoo.org> -ck-sources-2.4.27-r2.ebuild,
  +ck-sources-2.4.27-r3.ebuild, files/ck-sources-2.4.27.binfmt_elf.patch,
  +files/ck-sources-2.4.27.smbfs.patch,
  files/ck-sources-2.6.9.binfmt_elf.patch,
  +files/ck-sources-2.6.9.smbfs.patch:
  Version bump; updates binfmt_elf patch (bug #70681) and adds the smbfs
  security patch (bug #65877).

*ck-sources-2.4.27-r2 (12 Nov 2004)

  12 Nov 2004; <plasmaroo@gentoo.org> -ck-sources-2.4.27-r1.ebuild,
  +ck-sources-2.4.27-r2.ebuild, ck-sources-2.6.9-r3.ebuild,
  +files/ck-sources-2.4.27.binfmt_elf.patch,
  +files/ck-sources-2.6.9.binfmt_elf.patch:
  Version bump for the binfmt_elf security vulnerability, bug #70681.

*ck-sources-2.6.9-r3 (08 Nov 2004)

  08 Nov 2004; Daniel Drake <dsd@gentoo.org> -ck-sources-2.6.9-r2.ebuild,
  +ck-sources-2.6.9-r3.ebuild:
  Version bump thanks to affinity <waffinity@gmail.com> in bug 70185

  07 Nov 2004; Sven Wegener <swegener@gentoo.org> :
  Removed stray digest.

*ck-sources-2.4.27-r1 (06 Nov 2004)

  06 Nov 2004; <plasmaroo@gentoo.org> +ck-sources-2.4.27-r1.ebuild,
  -ck-sources-2.4.27.ebuild, +files/ck-sources-2.4.27.XDRWrapFix.patch:
  Fix for the kNFSd security vulnerability, bug #62524 and the CAN-2004-0814
  vulnerability, bug #68421.

  29 Oct 2004; Sven Wegener <swegener@gentoo.org> :
  Removed stray digest.

*ck-sources-2.6.9-r2 (26 Oct 2004)

  26 Oct 2004; Daniel Drake <dsd@gentoo.org>
  -files/ck-sources-2.6.7.cmdlineLeak.patch, -ck-sources-2.6.9-r1.ebuild,
  +ck-sources-2.6.9-r2.ebuild:
  Version bump.

  21 Oct 2004; <plasmaroo@gentoo.org> -ck-sources-2.6.8.1-r7.ebuild:
  Removing 2.6.8.1 version vulnerable to security bug #68421.

*ck-sources-2.6.9-r1 (19 Oct 2004)
