@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/ck-sources
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.67 2004/11/19 22:28:07 plasmaroo Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.68 2004/11/25 22:41:14 dsd Exp $
+
+  26 Nov 2004; Daniel Drake <dsd@gentoo.org> ck-sources-2.4.27-r3.ebuild,
+  ck-sources-2.6.9-r3.ebuild:
+  Remove redundant detect_version calls and clean up.
 
 *ck-sources-2.4.27-r3 (19 Nov 2004)
 
